src/test/deca/context/invalid/Objet/instanceOf_previous.des
InstanceOf must be preceded by a class type  or type Null
